argocd/apps/ollama-proxy/nginx-ollama-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: ollama
spec:
  type: ClusterIP
  selector:
    app: ollama-nginx
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama-ingress
  namespace: ollama
spec:
  ingressClassName: nginx
  rules:
    - host: ollama.anymus.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  name: http
